--- a/source/_posts/ 350 个特性了解 ES6.md
+++ b/source/_posts/ 350 个特性了解 ES6.md
@@ -53,16 +53,16 @@ description:
     *   默认设置为一个空对象如果没有提供赋值，比如：`function foo ({ a=1, b=2 } = {}) {}`
 *   参考阅读 [深入理解 ES6 JavaScript 解构](https://ponyfoo.com/articles/es6-destructuring-in-depth)
 
-### 展开运算符和不定参数
+### 展开运算符(spread)和不定(Rest)参数
 
-*   不定参数比`arguments` 更好
+*   不定(Rest)参数比`arguments` 更好
     *   你可以在一个方法里面像这样声明：`function foo (...everything) {}`
     *   `everything` 是一个数组，里面所有元素都是传递给该函数 `foo` 的多出来的实参的值.
     *   你可以在不定参数 `...everything` 之前定义其他参数, 比如 `function foo (bar, ...rest) {}`
     *   参数命名的形式为 `...rest`
     *   `...rest` 一定是在参数列表的最后
 
-*   展开运算符比 magic 更强大，并且支持`...`语法
+*   展开(spread)运算符比 magic 更强大，并且支持`...`语法
     *	避免使用 `.apply` 调用方法，`fn(...[1,2,3])` 和 `fn(1,2,3)` 是等效的
     *   数组之间更容易连接 ，比如`[1, 2, ...[3, 4, 5], 6, 7]`
     *   将类数组对象转换成数组, 比如 `[...document.querySelectorAll('img')]`
@@ -81,8 +81,7 @@ description:
     *   当你没有参数或者两个参数，更多参数的时候，用圆括号代表参数部分,像这样 `() => expr` 或 `(p1, p2) => expr`
     *   右边的代码块有多条语句的话用大括号括起来，`() => {}`
     *   当使用代码块的时候，没有隐式的 `return`，你要自己去提供一个：`() => { return 'foo' }`
-*   You can’t name arrow functions statically, but runtimes are now much better at inferring names for most methods
-*   你不能静态的命名箭头函数
+*   你不能静态的命名箭头函数，最后是函数运行的时候直接写箭头函数
 *   箭头函数会绑定它们自己的词法作用域
     *   `this` 就是父作用域上下文所在的 `this`
     *   `this` 不能被 `.call`,`.apply` 或者类似的反射类型方法修改
@@ -108,7 +107,7 @@ description:
 *   你可以用 `{foo}` 的写法代替`{foo:foo}` – 属性值简写
 *   计算属性名,比如 `{ [prefix + 'Foo']: 'bar' }`, 如果 `prefix: 'moz'`, 那么将得到 `{ mozFoo: 'bar' }`
 *   你不能快速合并计算属性名字和属性值，`{ [foo] }` 是无效的
-*   方法定义一个对象字面可以使用另一个声明,更简洁的语法
+*   方法定义一个对象字面量可以使用另一个声明,更简洁的语法
 *   在一个对象里面定义方法可以使用另外一个声明，更简单的语法，`{foo() {}}`
 *   参考 [`Object`](#object) 部分
 *   阅读 [深入理解 ES6 对象字面量](https://ponyfoo.com/articles/es6-object-literal-features-in-depth)
@@ -125,14 +124,12 @@ description:
 ### Let 和 Const
 * 	声明变量的时候，用`let`和`const`代替`var`
 *  `let`是个块级作用域，代替一个函数的词法作用域
-*  `let`是一个块级作用域，而不是`function`的词法作用域
-*  `let` 声明的变量会 [提升](https://ponyfoo.com/articles/javascript-variable-hoisting) 块级作用域的顶部, 而 `var` 生命的变量会提升到函数的顶部
-*   “暂时性死区” – TDZ 简介
+*  `let` 声明的变量会 [提升](https://ponyfoo.com/articles/javascript-variable-hoisting) 至块级作用域的顶部, 而 `var` 生命的变量会提升到函数的顶部
+*   “暂时性死区（Temporal Dead Zone）” – TDZ 简介
     *   块作用域在 `let foo` 声明的时候开始
     *   结束的地方让foo的声明放置在用户代码
     *   `let foo` 声明被用户的代码替换后结束作用域块
-    *   Attempts to access or assign to `foo` within the TDZ _(before the `let foo` statement is reached)_ result in an error
-    *   有助于在变量未声明前操作变量产生的神奇 bug。
+    *   有助于在变量未声明前操作变量产生的神奇 bug
 *   `const` 也是一个块级作用域，提升以及受限于 TDZ 语义
 *   `const` 变量必须要声明一个初始值，`const foo = 'bar'`
 *   在 `const` 变量初始化失败之后会默默的指向其他值
@@ -181,11 +178,11 @@ description:
 *   `next` 方法返回的对象有两个属性，`value `和 `done`。
     *   `value` 属性返回当前位置的成员
     *   `done` 属性是一个布尔值，表示遍历是否结束，即是否还有必要再一次调用next方法。
-*   Objects that have a `[Symbol.iterator]` value are _iterable_, because they subscribe to the iterable protocol
-*   Some built-ins like `Array`, `String`, or `arguments` – and `NodeList` in browsers – are iterable by default in ES6
-*   Iterable objects can be looped over with `for..of`, such as `for (let el of document.querySelectorAll('a'))`
-*   Iterable objects can be synthesized using the spread operator, like `[...document.querySelectorAll('a')]`
-*   You can also use `Array.from(document.querySelectorAll('a'))` to synthesize an iterable sequence into an array
+*   Objects 只要有 `[Symbol.iterator]`属性就是可遍历的， 
+*   一些内置的数据解构像 `Array`,`String`或者 `arguments`以及浏览器里的 `NodeList` 在 ES6 里默认都是 iterable
+*   Iterable objects 可以通过 `for..of` 实现循环，比如 `for (let el of document.querySelectorAll('a'))`
+*   Iterable objects 可以使用 `spread operator`, 比如 `[...document.querySelectorAll('a')]`
+*   可以通过`Array.from(document.querySelectorAll('a'))`去把一个 iterable队列转成数组
 *   Iterators are _lazy_, and those that produce an infinite sequence still can lead to valid programs
 *   Be careful not to attempt to synthesize an infinite sequence with `...` or `Array.from` as that **will** cause an infinite loop
 *   阅读 [深入理解 ES6 迭代器](https://ponyfoo.com/articles/es6-iterators-in-depth)
@@ -210,7 +207,8 @@ description:
     *   Take user-provided generator function
     *   User code is suspended while asynchronous operations take place
     *   Call `g.next()`, unsuspending execution in user code
-*   Read [ES6 Generators in Depth](https://ponyfoo.com/articles/es6-generators-in-depth)
+*   阅读 [ES6 Generators in Depth](https://ponyfoo.com/articles/es6-generators-in-depth)
+
 
 ### Promises
 
@@ -236,23 +234,22 @@ description:
 *   Read [ES6 Promises in Depth](https://ponyfoo.com/articles/es6-promises-in-depth)
 
 ### Maps
-
-*   A replacement to the common pattern of creating a hash-map using plain JavaScript objects
+*   一个代替原来 js object 创建 hash-map 的方法
     *   Avoids security issues with user-provided keys
     *   Allows keys to be arbitrary values, you can even use DOM elements or functions as the `key` to an entry
 *   `Map` adheres to _[iterable](#iterators)_ protocol
 *   用 `new Map()` 创建 `map`
 *   用 `iterable` 初始化一个 map ，类似 `new Map(iterable)` 里面的 `[[key1, value1], [key2, value2]]`
-*   用 `map.set(key, value)` 去添加条目
-*   用 `map.get(key)` 获取条目
-*   用 `map.has(key)` 检查 `key`
-*   通过 `map.delete(key)` 删除条目
+*   用 `map.set(key, value)` 去添加键值
+*   用 `map.get(key)` 获取键值
+*   用 `map.has(key)` 检查某个 `key`是否在 Map 里面，返回的布尔值
+*   通过 `map.delete(key)` 删除某个 `key`
 *   Iterate over `map` with `for (let [key, value] of map)`, the spread operator, `Array.from`, etc
 *   阅读 [ES6 Maps in Depth](https://ponyfoo.com/articles/es6-maps-in-depth)
 
 ### WeakMaps
 
-*   和 `Map` ；类似，但是不完全相同
+*   和 `Map` 类似，但是不完全相同
 *   `WeakMap` isn’t iterable, so you don’t get enumeration methods like `.forEach`, `.clear`, and others you had in `Map`
 *   `WeakMap` keys must be reference types. You can’t use value types like symbols, numbers, or strings as keys
 *   `WeakMap` entries with a `key` that’s the only reference to the referenced variable are subject to garbage collection
